Resolved cart counts visible for 3 digits in mobile view, Added sale icon befor cart in mobile menu

--- a/bista_superasia_theme/static/src/scss/style.css
+++ b/bista_superasia_theme/static/src/scss/style.css
@@ -1681,7 +1681,10 @@ right: 300px !important;
 }
 
 
-
+/*.sale_icon::after{
+content:"Sale";
+color:black;
+}*/
 
 /* Mobile Navigation */
 .mobile-nav {
